tests/fixtures/failing/std_result_self_apply.wm
from "std/result" import { map, Ok };

export let selfApply = () => {
  map(map, Ok(1))
};
